# unversion

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  with_observer.py
src/unversion/: __init__.py  __main__.py  cli.py  observer.py  store.py
tests/: __init__.py  test_observer.py  test_store.py
